# FFmpegAndroid

./: README.MD  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/krisez/video/: ExampleInstrumentedTest.java
app/src/androidTest/java/cn/krisez/vvv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_log.h  cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  native-lib.cpp
app/src/main/cpp/cmd/: ffmpeg_opt.c  ffprobe.c  native-ffmpeg.cpp
app/src/main/cpp/ffmpeg/: cmdutils.c  ffmpeg.h  ffprobe.c  ffprobe.h  native-ffmpeg.cpp
app/src/main/cpp/ffprobe/: ffprobe.c  native-ffprobe.cpp
app/src/main/java/cn/krisez/video/: MainActivity.java
app/src/main/java/cn/krisez/vvv/: FFmpegUtil.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/krisez/video/: ExampleUnitTest.java
app/src/test/java/cn/krisez/vvv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sh/: build32.sh  build64.sh
